# crypto3D

./: Cargo.toml  README copy.md  README.md  bindings.rs
arithmetic/: Cargo.toml
example/: Cargo.toml
example/src/: c3d.rs  lib.rs  linear.rs
example/src/inference/: image.npy  inference.rs
example/src/inference/c3d/: inference.rs
network/: Cargo.toml
network/src/: lib.rs
network/src/layers/: mod.rs  non_linear.rs
network/src/layers/linear/: average_pooling.rs  convolution.rs  fully_connected.rs  mod.rs
network/src/tensors/: mod.rs
primitives/: Cargo.toml
primitives/benches/: beavers_mul.rs  garbling.rs
primitives/src/: additive_share.rs  beavers_mul.rs  gc.rs  lib.rs
process/: generate_model.py  generate_test_images_old.py  inference_p_orig.py  model.py  sequential.py  serialize_weight.py
protocols/: Cargo.toml
protocols-sys/: Cargo.toml  build.rs
protocols-sys/c++/src/lib/: conv2d.h  fc_layer.h  im2col.h  interface.h  triples_gen.h
protocols-sys/src/: client_cg.rs  server_cg.rs
protocols-sys/tests/: interface_test.rs
protocols/src/: beavers_mul.rs  gc.rs  lib.rs  linear_layer.rs  neural_network.rs  quad_approx.rs  tests.rs
utils/: Cargo.toml
