[package]
name = "primitives"
version = "0.1.0"
edition = "2018"
description = "Cryptographic primitives used in Delphi"
keywords = ["cryptography", "finite fields", "garbled circuits", "secret sharing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md"]

[dependencies]
arithmetic = { path = "../arithmetic" }
derivative = { version = "1" }
rand_core = { version = "0.4" }
rand_chacha = { version = "0.1.1" }
num-traits = { version = "0.2" }
arrayvec = { version = "0.5" }
serde = { version = "1", features = [ "derive" ] }
ndarray = { version = "0.15.4", features = [ "serde" ] }
fancy-garbling = { version = "0.3", git = "https://github.com/pratyush/fancy-garbling/", branch = "add-serde", features = [ "serde1" ] }
rand = { version = "0.6" }

[dev-dependencies]
rand = { version = "0.6" }
criterion = { version = "0.2.10" }

[[bench]]
name = "beavers_mul"
harness = false

[[bench]]
name = "garbling"
harness = false
