[package]
name = "protocols-sys"
version = "0.1.0"
edition = "2018"
description = "FFI wrapper around the C++ library used"
keywords = ["cryptography", "finite fields", "homomorphic encryption",]
categories = ["cryptography"]
include = ["Cargo.toml", "src"]


[build-dependencies]
bindgen = { version = "0.52.0" }
cmake = { version = "0.1.42" }

[dependencies]
arithmetic= { path="../arithmetic" }
primitives= { path="../primitives" }
network = { path="../network" }
ndarray = { version = "0.15.4", features = [ "serde-1" ] }
num-traits = { version = "0.2.6"}
rand = { version = "0.6" }

[dev-dependencies]
rand_chacha = { version = "0.1.1" }
itertools = "0.9.0"
